Fixed the the border to be on the div and not the image as the image border was leading to an overlap

--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -4,9 +4,6 @@
 
 .cardContainer:hover {
     cursor: pointer;
-}
-
-.cardContainer img:hover {
     border: 10px solid blue;
     transition: 350ms ease;
     border-radius: 10px;
